add bootstrap and button component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>Buyy</h1>
-<app-header></app-header>
-<router-outlet></router-outlet>
-git 
+<div class="container m-auto">
+  <h1 class="content-justify-center">{{ title }}</h1>
+  <app-header></app-header>
+  <app-footer></app-footer>
+</div>
+  <router-outlet></router-outlet>
