--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<header>
+  <h2>{{ title }}</h2>
+  <app-button color="grey" text="Add" (btnClick)="toggleAddTask()"></app-button>
+</header>
