add interface Task, mock data, task component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container m-auto">
   <h1 class="content-justify-center">{{ title }}</h1>
   <app-header></app-header>
+  <app-task></app-task>
   <app-footer></app-footer>
 </div>
   <router-outlet></router-outlet>
