add user component and json-server fake api done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container m-auto">
   <h1 class="content-justify-center">{{ title }}</h1>
+  <app-user></app-user>
   <app-header></app-header>
   <app-task></app-task>
   <app-footer></app-footer>
 </div>
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
